--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🚴🏼‍♀️ Bikewatching</title>
+  <title>Bikewatching</title>
 
   <!-- global styles -->
   <link rel="stylesheet" href="style.css" />
@@ -13,6 +13,11 @@
   <link
     href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
     rel="stylesheet"
+  />
+  <link
+    rel="icon"
+    type="image/svg+xml"
+    href="assets/favicon.svg"
   />
 </head>
 <body>
